Updating upgrade guide with latest layoutX/Y info

--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -291,6 +291,8 @@ The following SVG values are not currently compatible with server-side rendering
 
 <APIProperty name="LayoutProps.layout" />
 <APIProperty name="LayoutProps.layoutId" />
+<APIProperty name="LayoutProps.layoutX" />
+<APIProperty name="LayoutProps.layoutY" />
 <APIFunction name="LayoutProps.onLayoutAnimationComplete" />
 <APIFunction name="LayoutProps.onViewportBoxUpdate()" />
 
