--- a/pages/motion/guide-upgrade-to-framer-motion-2.mdx
+++ b/pages/motion/guide-upgrade-to-framer-motion-2.mdx
@@ -75,17 +75,44 @@ Only immediate children will need to be corrected for scale.
 </motion.div>
 ```
 
+## Drag and useTransform
+
+Drag has been refactored to use the same layout projection rendering methodology that powers Motion 2's layout animations to ensure the two features are fully compatible with each other.
+
+It used to be possible to link the `x` transform and `opacity` using motion values and `useTransform`.
+
+```jsx
+const x = useMotionValue(0)
+const opacity = useTransform(x, [-100, 0, 100], [0, 1, 0])
+
+return <motion.div drag style={{ opacity, x }} />
+```
+
+This is still possible, but because the drag gesture no longer works with the x/y transform, this pattern no longer works.
+
+Instead, in Motion 2.1, `layoutX` and `layoutY` props are exposed that accept motion values. These values will be updated with the latest x/y distance of the projected box from the actual layout box.
+
+```jsx
+const layoutX = useMotionValue(0)
+const opacity = useTransform(
+  layoutX,
+  [-100, 0, 100],
+  [0, 1, 0]
+)
+
+return (
+  <motion.div drag layoutX={layoutX} style={{ opacity }} />
+)
+```
+
 ## Breaking changes
 
 There are some changes that don't have an immediate fix that you should be aware of before upgrading.
 
 ### Drag
 
-Drag has been refactored to use the same layout projection rendering methodology that powers Motion 2's layout animations to ensure the two features are fully compatible with each other.
+The changes to drag have resulted in the following further breaking changes:
 
-This has lead to some breaking changes:
-
-- `drag` no longer works directly on a component's `x` and `y` transform. This means any code that expects `x`/`y` motion values to update as a result of a drag gesture will no longer work. In a future version we'll reincorporate events and special motion values that will fix this.
 - Drag listeners (like `onDrag`) now report the `point` relative to the viewport, moving in line with other pointer gestures in Motion.
 - `dragOriginX` and `dragOriginY` have been removed. These were added to allow a hacky way to make `positionTransition` compatible with `drag`, but `layout` is compatible with `drag` by default.
 
