Making animations singular

--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -290,7 +290,7 @@ The following SVG values are not currently compatible with server-side rendering
 <APIFunction name="LayoutProps.onLayoutAnimationComplete" />
 <APIFunction name="LayoutProps.onViewportBoxUpdate()" />
 
-## Props: Gesture animations
+## Props: Gesture animation
 
 <APIProperty name="HoverHandlers.whileHover" />
 <APIProperty name="TapHandlers.whileTap" />
