Adding reference to onDragTransitionEnd

--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -326,6 +326,7 @@ The following SVG values are not currently compatible with server-side rendering
 <APIMethod name="DragHandlers.onDrag()" />
 <APIMethod name="DragHandlers.onDragStart()" />
 <APIMethod name="DragHandlers.onDragEnd()" />
+<APIMethod name="DragHandlers.onDragTransitionEnd()" />
 <APIMethod name="DragHandlers.onDirectionLock()" />
 
 ## Props: Advanced
