Adding inline example

--- a/pages/motion/guide-reduce-bundle-size.mdx
+++ b/pages/motion/guide-reduce-bundle-size.mdx
@@ -132,3 +132,9 @@ export function Component() {
   )
 }
 ```
+
+You can even mix
+
+```jsx
+<MotionConfig features={[AnimationFeature, ...features]}>
+```
