--- a/pages/motion/guide-reduce-bundle-size.mdx
+++ b/pages/motion/guide-reduce-bundle-size.mdx
@@ -133,7 +133,7 @@ export function Component() {
 }
 ```
 
-You can even mix
+You can even mix static and dynamic imports to load some features with a higher priority than others.
 
 ```jsx
 <MotionConfig features={[AnimationFeature, ...features]}>
