Missing word on line 153 (#119)
Line 153: "The new component will also any animating values...". 
My guess was 'inherit', but if that's not exactly the right word, now you're aware!

Thanks for the rad product. This is my first PR on someone else's work, my apologies if the etiquette is a bit off.

--- a/pages/motion/animate-shared-layout.mdx
+++ b/pages/motion/animate-shared-layout.mdx
@@ -150,7 +150,7 @@ isSelected && <motion.div layoutId="underline" />
 
 When a new component with a `layoutId` gets added as another gets removed, the component will perform a <Link href="/pages/motion/animation/#layout-animations">layout animation</Link> from previous component.
 
-The new component will also any animating values from the old component as its `initial` state. So visually it'll be treated as one continuous component.
+The new component will also inherit any animating values from the old component as its `initial` state. So visually it'll be treated as one continuous component.
 
 ```jsx
 <motion.div
