--- a/pages/motion/motionvalue.mdx
+++ b/pages/motion/motionvalue.mdx
@@ -154,6 +154,12 @@ These child components can be used exactly like the parents. They can be passed 
 
 ---
 
+## useMotionTemplate
+
+<APIFunction name="useMotionTemplate()" />
+
+---
+
 ## useTransform
 
 <APIFunction name="useTransform()" />
