--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -107,6 +107,7 @@ Transform properties are accelerated by the GPU, and therefore animate smoothly.
 - Scale: `scale`, `scaleX`, `scaleY`
 - Rotate: `rotate`, `rotateX`, `rotateY`, `rotateZ`
 - Skew: `skew`, `skewX`, `skewY`
+- Perspective: `transformPerspective`
 
 </div>
 
