--- a/pages/motion/motionvalue.mdx
+++ b/pages/motion/motionvalue.mdx
@@ -162,9 +162,11 @@ These child components can be used exactly like the parents. They can be passed 
 
 ## useTransform
 
-<APIFunction name="useTransform()" />
-
 <APIFunction name="(useTransform:2)" />
+
+<APIFunction name="(useTransform:3)" />
+
+<APIFunction name="useTransform()" />
 
 ---
 
@@ -183,12 +185,6 @@ These child components can be used exactly like the parents. They can be passed 
 ## useViewportScroll
 
 <APIFunction name="useViewportScroll()" />
-
----
-
-## useInvertedScale
-
-<APIFunction name="useInvertedScale()" />
 
 ---
 
