--- a/pages/motion/types.mdx
+++ b/pages/motion/types.mdx
@@ -77,6 +77,9 @@ A different type of animation can be defined for each animating value. `default`
 <APIProperty name="Orchestration.staggerChildren" />
 <APIProperty name="Orchestration.staggerDirection" />
 <APIProperty name="Orchestration.when" />
+<APIProperty name="Repeat.repeat" />
+<APIProperty name="Repeat.repeatType" />
+<APIProperty name="Repeat.repeatDelay" />
 
 ---
 
@@ -102,10 +105,6 @@ A different type of animation can be defined for each animating value. `default`
 ---
 
 <APIProperty name="Tween.from" />
-<APIProperty name="Tween.loop" />
-<APIProperty name="Tween.flip" />
-<APIProperty name="Tween.yoyo" />
-<APIProperty name="Tween.repeatDelay" />
 <APIProperty name="Tween.times" />
 
 ---
