Add documentation for useIsPresent (#126)
Co-authored-by: Aaron Pettengill <aaron.pettengill@echoman.com>

--- a/pages/motion/animate-presence.mdx
+++ b/pages/motion/animate-presence.mdx
@@ -206,3 +206,9 @@ export const MyComponent = ({ items }) => (
 ## usePresence
 
 <APIFunction name="usePresence" />
+
+---
+
+## useIsPresent
+
+<APIFunction name="useIsPresent" />
