--- a/pages/motion/utilities.mdx
+++ b/pages/motion/utilities.mdx
@@ -47,6 +47,12 @@ export default Template("Utilities")
 
 ---
 
+## useIsPresent
+
+<APIFunction name="useIsPresent" />
+
+---
+
 ## useDragControls
 
 <APIFunction name="useDragControls" />
