Fix typo in pages/examples.mdx (#128)

--- a/pages/examples.mdx
+++ b/pages/examples.mdx
@@ -308,7 +308,7 @@ export function MyComponent() {
 
 <div>
 
-To add `contraints` and limit the drag area, you can include the `dragConstraints` property.
+To add `constraints` and limit the drag area, you can include the `dragConstraints` property.
 Pass along an object with `top`, `right`, `bottom` and `left` values to define the dragging region.
 
 The values are measured relatively to the current object, so if you wanted to allow for `100` pixels of dragging to the left side of a `Frame`, you would have to add `left: -100`.
