Updating Framer Motion (#129)
* Updating Framer Motion

* Removing settings from Framer docs

--- a/pages/motion/types.mdx
+++ b/pages/motion/types.mdx
@@ -116,6 +116,8 @@ An animation that simulates spring physics for realistic motion.
 This is the default animation for physical values like `x`, `y`, `scale` and `rotate`.
 
 <APIProperty name="Spring.type" />
+<APIProperty name="Spring.duration" />
+<APIProperty name="Spring.bounce" />
 <APIProperty name="Spring.damping" />
 <APIProperty name="Spring.mass" />
 <APIProperty name="Spring.stiffness" />
