--- a/pages/motion/animation.mdx
+++ b/pages/motion/animation.mdx
@@ -89,7 +89,7 @@ Values in `animate` can also be set as a series of keyframes. This will animate 
 </div>
 
 ```jsx
-<motion.feGaussianBlur
+<motion.div
   animate={{ stdDeviation: [0, 5, 0] }}
 />
 ```
